<resources>
    <string name="app_name">Librairie De Henri Potier</string>
    <string name="text_bottom_navbar_book">Books</string>
    <string name="text_bottom_navbar_shopping_cart">Cart</string>
    <string name="book_title_item">Title</string>
    <string name="book_price_item">0€</string>
    <string name="book_details_title">Title</string>
    <string name="book_description_detail_image">Couverture du livre</string>
    <string name="book_detail_purchase">Buy</string>
    <string name="synopsis_placeholder">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="panier">Panier</string>
    <string name="nombre_livres">Livres achetés : %1$s</string>
    <string name="prix_panier">Prix</string>
    <string name="montant_prix">%1$s €</string>
    <string name="reduction">Réduction</string>
    <string name="montant_reduction">%1$s €</string>
    <string name="bouton_payer">Payer</string>
    <string name="text_button">Payer.exe a bien été téléchargé</string>
    <string name="quantity_book">x %1$s</string>
    <string name="bouton_supprimer">X</string>
</resources>