<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PanierActivity">

    <TextView
        android:id="@+id/panier_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/panier"
        style="@style/PanierTitre" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60sp"
        android:layout_marginBottom="108sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:elevation="10sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/panier_titre">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_panier_list_books"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18sp"
        />
    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            style="@style/ElementTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix_panier" />

        <TextView
            android:id="@+id/montant_prix"
            style="@style/Prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montant_prix"
            android:textStyle="bold" />

        <TextView
            style="@style/ElementTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reduction" />

        <TextView
            android:id="@+id/montant_reduction"
            style="@style/Reduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montant_reduction" />

        <Button
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_payer" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>